force-app/main/default/objects/ccrz__E_RuleSourceSpec__c/ccrz__E_RuleSourceSpec__c.object-meta.xml
<CustomObject>
    <label>CC Rule Source Spec</label>
    <nameField>
        <label>Rule Source Spec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rule Source Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>