force-app/main/default/objects/ccrz__E_RuleSourceSpec__c/fields/ccrz__Rule__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>ccrz__E_Rule__c</referenceTo>
    <relationshipLabel>Rule Source Specs</relationshipLabel>
    <relationshipName>Rule_Source_Specs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>