force-app/main/default/objects/ccrz__E_RuleSourceSpec__c/fields/ccrz__SpecValue__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SpecValue__c</fullName>
    <label>Spec Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>